monitoring/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: ayan-warsame
spec:
  type: ClusterIP
  ports:
  - port: 9093
    targetPort: 9093
  selector:
    alertmanager: alertmanager
