monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: ayan-warsame
  labels:
    app: prometheus
    release: prometheus
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: web
  selector:
    prometheus: ayan-warsame-prometheus
    app.kubernetes.io/name: prometheus
