monitoring/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: ayan-warsame
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    prometheus: ayan-warsame-prometheus
